--- a/app.json
+++ b/app.json
@@ -30,7 +30,14 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/icon.png",
+          "color": "#0ea5e9"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
